# hard-limits-sparse-bioelectric-control

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml
.gpd/: CONVENTIONS.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json  state.json
.gpd/intake/: parent-project-notes.md
.gpd/phases/01-control-ready-model-specification/: 01-01-SUMMARY.md  01-PLAN.md
docs/: manuscript-draft.md
docs/derivations/: controlled-dynamics.md  linear-minimum-energy-control.md
docs/results/: actuation-rank-16x16.csv  actuation-rank-study-8x8.md  default-lattice-a-vs-l-overlap.csv  default-lattice-phase2-baseline.md  disorder-sweep-8x8-side-patch.csv  final-three-computations.md  greedy-envelope-8x8.csv  greedy-rank-trajectory-central_lesion-8x8.csv  greedy-rank-trajectory-corner_wound-8x8.csv  greedy-rank-trajectory-side_patch-8x8.csv  placement-heatmap-8x8-side-patch.csv  placement-residual-8x8-side-patch.csv  placement-scan-8x8-side-patch.csv  placement-study-phase2.md
research/control_gap_junction/: __init__.py  analysis.py  disorder.py  dynamics.py  geometry.py  initialization.py  model.py  morphology.py  observables.py  placement.py  simulator.py  studies.py
tests/: test_control_ready.py  test_linear_control.py  test_placement.py  test_smoke.py
